fix: Modify UI review comments

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -380,7 +380,7 @@
 }
 
 // 9、modal模态框
-.tiny-modal__box.tiny-modal__box {
+.tiny-modal__box.tiny-modal__box.tiny-modal__box {
   padding: 20px;
   border-radius: var(--te-base-border-radius-1);
   box-shadow: 0 0 10px 0 var(--te-base-rgba-23);
