fix:Modify search in i18n

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -790,6 +790,9 @@
           .tiny-grid-tree-wrapper .tiny-grid-tree__node-btn {
             fill: var(--te-common-icon-secondary);
           }
+          &:hover {
+            background-color: var(--te-common-bg-container);
+          }
         }
       }
     }
