fix:Modify dialog style and i18n Panel shadow

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -690,6 +690,10 @@
 // 18、表单
 .tiny-form.tiny-form {
   .tiny-form-item {
+    margin-bottom: 12px;
+    &:last-of-type {
+      margin-bottom: 0px;
+    }
     .tiny-form-item__label {
       color: var(--te-common-text-secondary);
       font-size: var(--te-base-font-size-base);
