fix: Modify UI review comments in i18n

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -747,6 +747,11 @@
             }
             .tiny-grid-required-icon {
               align-self: center;
+              margin-top: 5px;
+            }
+            .tiny-grid-resizable.is__line:before,
+            .tiny-grid-thead-partition.is__line:before {
+              background-color: var(--te-common-border-hover);
             }
           }
           .tiny-grid-cell {
@@ -796,6 +801,11 @@
           }
           &:hover {
             background-color: var(--te-common-bg-container);
+          }
+          .tiny-grid-default-input {
+            height: 24px;
+            border-radius: 4px;
+            border-color: var(--te-common-border-default);
           }
         }
       }
