fix: Modify review comments

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -785,7 +785,7 @@
             }
             .tiny-grid-resizable.is__line:before,
             .tiny-grid-thead-partition.is__line:before {
-              background-color: var(--te-common-border-hover);
+              background-color: var(--te-common-border-bg-divider);
             }
           }
           .tiny-grid-cell {
@@ -839,7 +839,7 @@
           }
           .tiny-grid-default-input {
             height: 24px;
-            border-radius: 4px;
+            border-radius: var(--te-base-border-radius-1);
             border-color: var(--te-common-border-default);
           }
         }
@@ -847,7 +847,7 @@
     }
     .tiny-grid-checkbox {
       color: var(--te-common-border-hover);
-      border-radius: 4px;
+      border-radius: var(--te-base-border-radius-1);
     }
     .row__selected .tiny-grid-checkbox {
       color: var(--te-common-color-info);
