--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -283,6 +283,12 @@
     color: var(--te-common-text-secondary);
     padding: 0;
     margin-top: 16px;
+    .tiny-form-item.is-text.is-no-asterisk.tiny-form-item--default {
+      margin-bottom: 12px;
+      &:last-of-type {
+        margin-bottom: 0px;
+      }
+    }
   }
   .tiny-dialog-box__footer {
     margin-top: 16px;
@@ -738,9 +744,6 @@
   }
   .tiny-form-item.is-text.is-no-asterisk.tiny-form-item--default {
     margin-bottom: 12px;
-    &:last-of-type {
-      margin-bottom: 0px;
-    }
   }
   .tiny-form-item__error--block {
     padding-top: 4px;
