--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -12,6 +12,9 @@
       font-size: var(--te-base-font-size-1);
       color: var(--te-common-text-weaken);
     }
+    .tiny-input__suffix {
+      top: 50%;
+    }
   }
   .tiny-select__tags {
     .tiny-tag {
@@ -35,7 +38,7 @@
     margin: 8px 12px 4px 12px;
     > div {
       color: var(--te-common-text-emphasize);
-      font-size: var(--te-base-font-size-1);
+      font-size: var(--te-base-font-size-base);
     }
   }
   // 下拉选项框
@@ -530,12 +533,12 @@
 
 // 12、popover气泡卡片
 .tiny-popover.tiny-popover.tiny-popper[x-placement] {
-  padding: 0px 8px;
+  padding: 12px 16px;
   font-size: var(--te-base-font-size-base);
   color: var(--te-common-text-primary);
   background-color: var(--te-common-bg-popover);
   border: 0;
-  box-shadow: 0 8px 24px 0 var(--te-base-box-shadow-rgba-2);
+  box-shadow: 0 -2px 12px 0 var(--te-base-box-shadow-rgba-2);
 
   height: auto;
 }
@@ -684,12 +687,12 @@
   &.tiny-tooltip__popper {
     background: var(--te-common-bg-popover);
     color: var(--te-common-text-primary);
-    box-shadow: 0 0 20px 0 var(--te-base-box-shadow-rgba-2);
+    box-shadow: 0 -2px 12px 0 var(--te-base-box-shadow-rgba-2);
     &[class*='is-'] {
       background: var(--te-common-bg-popover);
       color: var(--te-common-text-primary);
       font-size: var(--te-base-font-size-base);
-      padding: 12px;
+      padding: 12px 16px;
       &[x-placement^='top'] {
         .popper__arrow {
           border-top-color: var(--te-common-bg-popover);
@@ -727,7 +730,7 @@
 }
 
 // 18、表单
-.tiny-form.tiny-form {
+.tiny-form.tiny-form.tiny-form {
   .tiny-form-item {
     margin-bottom: 12px;
     &:last-of-type {
@@ -744,12 +747,25 @@
   }
   .tiny-form-item.is-text.is-no-asterisk.tiny-form-item--default {
     margin-bottom: 12px;
+    &:last-of-type {
+      margin-bottom: 0px;
+    }
   }
   .tiny-form-item__error--block {
     padding-top: 4px;
   }
   .tiny-form-item__error {
     font-size: var(--te-base-font-size-base);
+    color: var(--te-common-color-error);
+  }
+  .tiny-form-item.is-error .tiny-input__inner,
+  .tiny-form-item.is-error .tiny-input__inner:focus,
+  .tiny-form-item.is-error .tiny-textarea,
+  .tiny-form-item.is-error .tiny-textarea:focus,
+  .tiny-form-item.is-error .tiny-textarea__inner,
+  .tiny-form-item.is-error .tiny-textarea__inner:focus {
+    border-color: var(--te-common-color-error);
+    background-color: var(--te-base-red-10);
   }
 }
 .tiny-form--label-left.label-align .tiny-form-item.is-required .tiny-form-item__label.tiny-form-item__label {
