fix: Modify the fixed column style of the table

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -791,6 +791,9 @@
     background-color: var(--te-common-bg-default);
     color: var(--te-common-text-primary);
     cursor: pointer;
+    th.fixed__column {
+      background-color: var(--te-common-bg-container);
+    }
     .tiny-grid__header-wrapper {
       background-color: var(--te-common-bg-container);
       .tiny-grid__header {
@@ -860,6 +863,9 @@
           }
           &:hover {
             background-color: var(--te-common-bg-container);
+            .fixed__column {
+              background-color: var(--te-common-bg-container);
+            }
           }
           .tiny-grid-default-input {
             height: 24px;
