fix: Modify top operation buttons and L1 panel

--- a/packages/theme/base/src/base.less
+++ b/packages/theme/base/src/base.less
@@ -39,6 +39,7 @@
   --te-base-red-120: #d4827f;
   --te-base-red-130: #f2c5c2;
   --te-base-red-140: rgba(242, 48, 48, 0.3);
+  --te-base-red-150: #330002;
 
   // expand-orange
   --te-base-orange-10: #fff5e8;
