--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -311,6 +311,9 @@
     .tiny-button--info {
       margin-left: 8px;
     }
+    .tiny-button--default.tiny-button--default {
+      border-color: var(--te-common-border-secondary);
+    }
   }
 }
 
@@ -769,7 +772,7 @@
   .tiny-form-item.is-error .tiny-textarea__inner,
   .tiny-form-item.is-error .tiny-textarea__inner:focus {
     border-color: var(--te-common-color-error);
-    background-color: var(--te-base-red-10);
+    background-color: var(--te-common-bg-error);
   }
 }
 .tiny-form--label-left.label-align .tiny-form-item.is-required .tiny-form-item__label.tiny-form-item__label {
