fix:Modify  block group and class

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -44,6 +44,9 @@
       font-size: var(--te-base-font-size-base);
     }
   }
+  .tiny-select-dropdown__empty {
+    font-size: var(--te-base-font-size-base);
+  }
   // 下拉选项框
   .tiny-select-dropdown__item {
     padding: 0px 12px;
