fix:Modify event popover and dialog style

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -797,6 +797,7 @@
 .tiny-form-item__label.tiny-form-item__label {
   padding-right: 16px;
 }
+.tiny-form--label-left.has-required .tiny-form-item__label,
 .tiny-form--label-left.label-align .tiny-form-item.is-required .tiny-form-item__label.tiny-form-item__label {
   padding-left: 0;
 }
