--- a/packages/theme/base/src/common.less
+++ b/packages/theme/base/src/common.less
@@ -19,7 +19,7 @@
   --te-common-text-checked: var(--te-base-blue-60); // 选中或者hover文字 #1476ff
 
   --te-common-icon-primary: var(--te-base-gray-90); // 重要图标色 #191919
-  --te-common-icon-hover: var(--te-base-gray-70); // 图标默认色 #595959
+  --te-common-icon-hover: var(--te-base-gray-70); // 图标悬浮色 #595959
   --te-common-icon-secondary: var(--te-base-gray-60); // 图标默认色 #808080
   --te-common-icon-disabled: var(--te-base-gray-50); // 图标禁用色 #c2c2c2
   --te-common-icon-link: var(--te-base-blue-60); // 图标提示色 #1476ff
@@ -48,7 +48,7 @@
   --te-common-bg-default: var(--te-base-gray-0); // 白色背景-输入框背景/面板背景色 #fff
   --te-common-bg-disabled: var(--te-base-gray-20); // 禁用/标签/下拉框多选标签 背景色 #f0f0f0
   --te-common-bg-switch: var(--te-base-gray-50); // 开关默认色 #c2c2c2
-  --te-common-bg-error: var(--te-base-red-10); // 浅色错误背景-背景色 #fce2e0
+  --te-common-bg-error: var(--te-base-red-10); // 浅色错误背景-背景色 #fff1f0
   --te-common-bg-popover: var(--te-base-gray-0); // 对话框/tooltip/popover背景 #fff
   --te-common-bg-text-emphasize: var(--te-base-blue-140); // 强调性文字背景色 rgba(20, 118, 255, 0.1)
 
@@ -104,7 +104,7 @@
   --te-common-bg-default: var(--te-base-gray-160); // 深色背景-输入框背景/面板背景色 #212329
   --te-common-bg-disabled: var(--te-base-gray-150); // 禁用/标签/下拉框多选标签 背景色 #2a2c31
   --te-common-bg-switch: var(--te-base-gray-130); // 开关默认色 #4D4E52
-  --te-common-bg-error: var(--te-base-red-150); // 浅色错误背景-背景色 #fce2e0
+  --te-common-bg-error: var(--te-base-red-150); // 深色错误背景-背景色 #330002
   --te-common-bg-popover: var(--te-base-gray-170); // 对话框/tooltip/popover背景 #0F1115
 
   // 通用间距
