--- a/packages/theme/base/src/common.less
+++ b/packages/theme/base/src/common.less
@@ -33,6 +33,7 @@
   --te-common-border-divider: var(--te-base-gray-30); //线条-白色背景分割线颜色 #e6e6e6
   --te-common-border-bg-divider: var(--te-base-gray-40); // 线条-灰色背景分割线颜色/表头分割线/选块分割线 #dbdbdb
   --te-common-border-checked: var(--te-base-blue-60); // 线条 选中色 #1476ff
+  --te-common-border-error-hover: var(--te-base-red-30); // 线条 红色按钮边框hover色 #faa7a3
 
   --te-common-bg-primary: var(--te-base-gray-90); // 主要按钮-背景色 #191919
   --te-common-bg-primary-checked: var(--te-base-blue-60); // 主色-背景色  选中和hover等颜色 #1476ff
@@ -51,6 +52,7 @@
   --te-common-bg-error: var(--te-base-red-10); // 浅色错误背景-背景色 #fff1f0
   --te-common-bg-popover: var(--te-base-gray-0); // 对话框/tooltip/popover背景 #fff
   --te-common-bg-text-emphasize: var(--te-base-blue-140); // 强调性文字背景色 rgba(20, 118, 255, 0.1)
+  --te-common-bg-info: var(--te-base-blue-20); // 提示框info背景色 #e7f1ff
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
@@ -90,6 +92,7 @@
   --te-common-border-divider: var(--te-base-gray-140); //线条-白色背景分割线颜色 #36383D
   --te-common-border-bg-divider: var(--te-base-gray-130); // 线条-灰色背景分割线颜色/表头分割线/选块分割线 #4D4E52
   --te-common-border-checked: var(--te-base-blue-60); // 线条 选中色 #1476ff
+  --te-common-border-error-hover: var(--te-base-red-90); // 线条 红色按钮边框hover色 #78080e
 
   --te-common-bg-primary: var(--te-base-gray-20); // 主要按钮-背景色 #F0F0F0
   --te-common-bg-primary-checked: var(--te-base-blue-60); // 主色-背景色 选中和hover等颜色 #1476ff
@@ -106,6 +109,7 @@
   --te-common-bg-switch: var(--te-base-gray-130); // 开关默认色 #4D4E52
   --te-common-bg-error: var(--te-base-red-150); // 深色错误背景-背景色 #330002
   --te-common-bg-popover: var(--te-base-gray-170); // 对话框/tooltip/popover背景 #0F1115
+  --te-common-bg-info: var(--te-base-blue-110); // 提示框info背景色 #202b3f
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
