fix: Modify UI review comments

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -321,6 +321,7 @@
       background-color: transparent;
       &:hover {
         border-color: var(--te-common-border-error-hover);
+        background-color: transparent;
       }
     }
     .tiny-button--primary,
