fix:Modify dialog footer button

--- a/packages/theme/base/src/common.less
+++ b/packages/theme/base/src/common.less
@@ -19,6 +19,7 @@
   --te-common-text-checked: var(--te-base-blue-60); // 选中或者hover文字 #1476ff
 
   --te-common-icon-primary: var(--te-base-gray-90); // 重要图标色 #191919
+  --te-common-icon-hover: var(--te-base-gray-70); // 图标悬浮色 #595959
   --te-common-icon-secondary: var(--te-base-gray-60); // 图标默认色 #808080
   --te-common-icon-disabled: var(--te-base-gray-50); // 图标禁用色 #c2c2c2
   --te-common-icon-link: var(--te-base-blue-60); // 图标提示色 #1476ff
@@ -32,6 +33,7 @@
   --te-common-border-divider: var(--te-base-gray-30); //线条-白色背景分割线颜色 #e6e6e6
   --te-common-border-bg-divider: var(--te-base-gray-40); // 线条-灰色背景分割线颜色/表头分割线/选块分割线 #dbdbdb
   --te-common-border-checked: var(--te-base-blue-60); // 线条 选中色 #1476ff
+  --te-common-border-error-hover: var(--te-base-red-30); // 线条 红色按钮边框hover色 #faa7a3
 
   --te-common-bg-primary: var(--te-base-gray-90); // 主要按钮-背景色 #191919
   --te-common-bg-primary-checked: var(--te-base-blue-60); // 主色-背景色  选中和hover等颜色 #1476ff
@@ -47,9 +49,10 @@
   --te-common-bg-default: var(--te-base-gray-0); // 白色背景-输入框背景/面板背景色 #fff
   --te-common-bg-disabled: var(--te-base-gray-20); // 禁用/标签/下拉框多选标签 背景色 #f0f0f0
   --te-common-bg-switch: var(--te-base-gray-50); // 开关默认色 #c2c2c2
-  --te-common-bg-error: var(--te-base-red-20); // 浅色错误背景-背景色 #fce2e0
+  --te-common-bg-error: var(--te-base-red-10); // 浅色错误背景-背景色 #fff1f0
   --te-common-bg-popover: var(--te-base-gray-0); // 对话框/tooltip/popover背景 #fff
   --te-common-bg-text-emphasize: var(--te-base-blue-140); // 强调性文字背景色 rgba(20, 118, 255, 0.1)
+  --te-common-bg-info: var(--te-base-blue-20); // 提示框info背景色 #e7f1ff
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
@@ -75,6 +78,7 @@
   --te-common-text-checked: var(--te-base-blue-60); // 选中或者hover文字 #1476ff
 
   --te-common-icon-primary: var(--te-base-gray-20); // 重要图标色 #F0F0F0
+  --te-common-icon-hover: var(--te-base-gray-110); //  图标悬浮色 #B4B5B8
   --te-common-icon-secondary: var(--te-base-gray-120); // 图标默认色 #8B8C8F
   --te-common-icon-disabled: var(--te-base-gray-50); // 图标禁用色 #C2C2C2
   --te-common-icon-link: var(--te-base-blue-60); // 图标提示色 #1476ff
@@ -88,6 +92,7 @@
   --te-common-border-divider: var(--te-base-gray-140); //线条-白色背景分割线颜色 #36383D
   --te-common-border-bg-divider: var(--te-base-gray-130); // 线条-灰色背景分割线颜色/表头分割线/选块分割线 #4D4E52
   --te-common-border-checked: var(--te-base-blue-60); // 线条 选中色 #1476ff
+  --te-common-border-error-hover: var(--te-base-red-90); // 线条 红色按钮边框hover色 #78080e
 
   --te-common-bg-primary: var(--te-base-gray-20); // 主要按钮-背景色 #F0F0F0
   --te-common-bg-primary-checked: var(--te-base-blue-60); // 主色-背景色 选中和hover等颜色 #1476ff
@@ -102,8 +107,9 @@
   --te-common-bg-default: var(--te-base-gray-160); // 深色背景-输入框背景/面板背景色 #212329
   --te-common-bg-disabled: var(--te-base-gray-150); // 禁用/标签/下拉框多选标签 背景色 #2a2c31
   --te-common-bg-switch: var(--te-base-gray-130); // 开关默认色 #4D4E52
-  --te-common-bg-error: var(--te-base-red-20); // 浅色错误背景-背景色 #fce2e0
+  --te-common-bg-error: var(--te-base-red-150); // 深色错误背景-背景色 #330002
   --te-common-bg-popover: var(--te-base-gray-170); // 对话框/tooltip/popover背景 #0F1115
+  --te-common-bg-info: var(--te-base-blue-110); // 提示框info背景色 #202b3f
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
